Added basic stuff

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="_nK">
-    <title>Umbrella. | Photography Template</title>
+    <title>Shibari Studios. | Photography</title>
     <link rel="icon" type="image/png" href="assets/images/favicon.jpg">
 
     <!-- START: Styles -->
@@ -214,7 +214,7 @@
             <nav class="nk-nav">
                 <ul>
                     <li>
-                        <a href="blog.html">Blog</a>
+                        MisstressLin
                     </li>
                 </ul>
             </nav>
@@ -242,8 +242,8 @@
 
         <!-- Titles -->
         <div class="nk-layout-content-tagline"><strong>12 Years of Experience</strong></div>
-        <h3 class="nk-layout-content-title">Start Cheering.</h3>
-        <h3 class="nk-layout-content-subtitle">The Supermodels Always Bring Their Flawless Festival Style to Rio</h3>
+        <!-- <h3 class="nk-layout-content-title">Elegant Desire</h3>
+        <h3 class="nk-layout-content-subtitle">Luxury boudoir photography designed to empower</h3> -->
     </div>
     <!-- END: Fixed Layout -->
 
@@ -258,7 +258,7 @@
                         <nav class="nk-nav">
                             <ul>
                                 <li>
-                                    <a href="blog.html">
+                                    <a mai="blog.html">
                 <span>Blog</span>
             </a>
                                 </li>
