--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 <nav class="nk-nav">
                     <ul>
                         <li>
-                            <a href="studio.html">Studio</a>
+                            <a href="studio.html">Gallery</a>
                         </li>
                         <li>
                             <a href="contact.html">Contact</a>
@@ -257,11 +257,7 @@
                     <div class="nk-nav-row nk-nav-row-center">
                         <nav class="nk-nav">
                             <ul>
-                                <li>
-                                    <a mai="blog.html">
-                <span>Blog</span>
-            </a>
-                                </li>
+
                                 <li>
                                     <a href="about.html">
                 <span>About</span>
